--- a/Project1/Project1.csproj
+++ b/Project1/Project1.csproj
@@ -152,6 +152,11 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\philippines-sister-missionaries-praying-teaching-ridin-1361351-wallpaper.jpg" />
+    <Content Include="Content\romania-missionaries-adults-classroom-talking-1312424-wallpaper.jpg" />
+    <Content Include="Content\romania-missionaries-teaching-man-1312487-wallpaper.jpg" />
+    <Content Include="Content\sister-missionaries-956170-wallpaper.jpg" />
+    <Content Include="Content\social-interaction-missionaries-fellowshipping-1262209-wallpaper.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
