--- a/Project1/Web.config
+++ b/Project1/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="MissionsContext" connectionString="Data Source=LAPTOP-R0E2B7BM;Initial Catalog=Missions;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
